--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,13 @@
 bad-words:
   file: Badwords.txt
+
+spring:
+  datasource:
+    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+    driverClassName: org.h2.Driver
+    username: username
+    password: password
+  jpa:
+    show-sql: false
+    hibernate:
+      ddl-auto: create-drop
